Bætti við í index

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,2 @@
-<!DOCTYPE html PUBLIC> 
-<html>
-    <head>
-        
-    </head>
-</html>
+let template = ejs.compiler(str, opt);
+template(data);
