--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,14 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fyrirlestur</title>
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i|Roboto+Mono:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="grid.css">
-  <link rel="stylesheet" href="./dist/styles.css">
+  <link rel="stylesheet" href="../public/styles.css">
 </head>
-<body class="lecture-page">
-  <main>
-    <section class="lecture">
-    </section>
-  </main>
-  <script src="./dist/bundle.js"></script>
-</body>
-</html>
+<body>
+  <header class="heading heading--main">
+    <span class="heading__category">Vefforritun</span>
+    <h1 class="heading__title">Fyrirlestrar</h1>
+  </header>
