--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Hópverkefni 2</title>
-  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i|Roboto+Mono:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="grid.css">
-  <link rel="stylesheet" href="./dist/styles.css">
-</head>
-<body>
-  <header class="heading heading--main">
-    <span class="heading__category">Vefforritun</span>
-    <h1 class="heading__title">Fyrirlestrar</h1>
-  </header>
+<%- include header -%>
+
+
   <main>
     <ul class="filters">
       <li><button data-category="html" class="filters__filter filters__filter--html">HTML</button></li>
@@ -22,8 +9,21 @@
     </ul>
     <div class="list">
       <div class="list__row"> <!--Vantar einhverja virkni hér í ejs template-->
+          <% lectures.forEach((lecture) => { %>
+          <div class="list__col">
+          <a href= "<%= lecture.slug %>" class="listItem">
+              <div class="listItem__image">
+                  <img src= "<%= lecture.thumbnail %>" alt="">
+              </div>
+              <div class="listItem__bottom">
+                  <span class="listItem__category"><%= lecture.category %></span>
+                  <h2 class="listItem__title"><%= lecture.title %></h2>
+              </div>
+          </a>
+      </div>
+          <% }) %>
       </div>
     </div>
   </main>
-</body>
-</html>
+
+<%- include footer -%>
