--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,7 @@
 <%- include ('header') %>
 
-<div class "error" >
-    <p class= "error_message=">
+<div class = "error" >
+    <p class = "error_message=">
         <%= message %>
     </p>
     <a class="back" href="/">Til baka</a>
