Elsint fixing and making error

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,10 +1,17 @@
-<%- include ('header') %>
+<%- include header -%>
 
-<div class = "error" >
-    <p class = "error_message=">
-        <%= message %>
-    </p>
-    <a class="back" href="/">Til baka</a>
-    </div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Fyrirlestur</title>
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i|Roboto+Mono:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="../public/styles.css">
+</head>
+<header class="heading">
+<span class="heading__category"><%= message %></span>
+<h1 class="heading__title"><%= title %></h1>
+</header>
 
-    <%- include('footer') %>
+<%- include footer -%>
