--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,12 @@
 <%- include header -%>
 
 
-  <main>
+<body>
+  <header class="heading heading--main">
+    <span class="heading__category">Vefforritun</span>
+    <h1 class="heading__title">Fyrirlestrar</h1>
+  </header>  
+<main>
     <ul class="filters">
       <li><button data-category="html" class="filters__filter filters__filter--html">HTML</button></li>
       <li><button data-category="css" class="filters__filter filters__filter--css">CSS</button></li>
